syntax = "proto3";

package monotreme.store;

import "store/common.proto";

option go_package = "gen/store";

message Shortcut {
  int32 id = 1;

  string uuid = 5;

  int32 creator_id = 2;

  int64 created_ts = 3;

  int64 updated_ts = 4;

  string name = 6;

  string link = 7;

  string title = 8;

  repeated string tags = 9;

  string description = 10;

  Visibility visibility = 11;

  OpenGraphMetadata og_metadata = 12;
}

message OpenGraphMetadata {
  string title = 1;

  string description = 2;

  string image = 3;
}
